<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white"
            android:background="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_2"
            android:clipToPadding="false"
            tools:listitem="@layout/item_recording" />

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/empty_hint"
            android:textSize="16sp"
            android:textColor="?android:attr/textColorSecondary"
            android:gravity="center"
            android:padding="@dimen/space_5"
            android:visibility="gone" />
    </FrameLayout>

    <!-- FAB + Orbital animation wrapper -->
    <FrameLayout
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/space_2">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/fab_record_desc"
            app:srcCompat="@drawable/ic_microphone"
            app:backgroundTint="@color/colorAccent"
            app:tint="@android:color/white" />

        <!-- drawn AFTER (= on top of) the FAB so dots are always visible -->
        <com.jrgames.audiorecorder.ui.OrbitalDotsView
            android:id="@+id/orbital_dots"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

